sent and recieved the value from sent to each of the Fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,9 @@
         -  \n
         -  \n
     </string>
-
+    <string name="argumentKey">
+        promptList
+    </string>
     <string name="SendConfirmation">
 mnmnmn
     </string>
